# cli

./: README.md
haskell/: app.cabal.XXXXXXXX  haskell.cabal  hsbe.cabal
haskell/app/: Main.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/src/: Greeter.hs  Hello.hs  Hello.hs_old  SayHello.hs
haskell/src/Hello/: Main.hs
today.hs/: .ghc.environment.x86_64-darwin-8.10.7  Main  Main.hs  Makefile  README.md  Today.hs  today
