cabal-version:      2.4
name:               haskell
version:            0.1.0.0
-- A short (one-line) description of the package.
-- synopsis:
-- A longer description of the package.
-- description:
-- A URL where users can report bugs.
-- bug-reports:
-- The license under which the package is released.
-- license:
author:             hjalmar jakobsson
maintainer:         hjalmar.jakobsson@telia.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  hs-source-dirs:
    src
  exposed-modules:
    SayHello
    , Greeter
  -- other-modules:
  build-depends:
    base ^>=4.14.3.0
    , titlecase
    -- haskell-say ^>=1.0.0.0,

executable hs-by-example
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0
        , greeter
    default-language: Haskell2010
