cabal-version:      2.4
name:               hsbe
version:            0.1.0.0
-- synopsis: Haskell by example
-- description:
--     Project implementation of the haskell by example website
--     which in turn is a reimplementation of go-by-example.
-- bug-reports:
-- license:            GPL
author:             hjalmar jakobsson
maintainer:         hjalmar.jakobsson@telia.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
    base == 4.*
  ghc-options:
    -Wall

library
  import: shared-properties
  exposed-modules:     Hello
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hsbe
    hs-source-dirs: app
    build-depends:       base >= 4 && < 5
    -- build-depends:
    --     base
    --     , greeter
    default-language: Haskell2010
    main-is:          Main.hs
